# nexa-marketdata

./: .env.example  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/commands/: checks.md  pr.md  release.md  rmbranch.md
.github/workflows/: ci.yaml  ci.yml  claude.yaml  publish.yaml
docs/: nordpool.md
examples/: entsoe_day_ahead_prices.ipynb  nordpool_day_ahead_prices.ipynb.hide  simple.py
src/nexa_marketdata/: __init__.py  cache.py  client.py  eex.py  entsoe.py  epex_spot.py  exaa.py  exceptions.py  nordpool.py  normalise.py  rate_limit.py  types.py
tests/: conftest.py  test_cache.py  test_client.py  test_eex.py  test_entsoe.py  test_epex_spot.py  test_exaa.py  test_nordpool.py  test_nordpool_auction.py  test_normalise.py  test_rate_limit.py  test_types.py
tests/fixtures/: nordpool_auction_prices_response.json  nordpool_prices_response.json
