[tool.poetry]
name = "nexa-marketdata"
version = "0.1.0"
description = "Unified API client for European power market data sources"
authors = ["Phase Nexa <hello@phasenexa.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phasenexa/nexa-marketdata"
repository = "https://github.com/phasenexa/nexa-marketdata"
keywords = ["energy", "power", "market-data", "nordpool", "entsoe", "epex", "eex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
packages = [{ include = "nexa_marketdata", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = ">=0.27"
pydantic = ">=2.0"
pandas = ">=2.0"
tenacity = ">=8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
vcrpy = ">=6.0"
hypothesis = ">=6.0"
mypy = ">=1.10"
ruff = ">=0.4"
pandas-stubs = ">=2.0"
respx = ">=0.20"
jupyter = ">=1.0"
nbconvert = ">=7.0"
ipykernel = ">=6.0"
matplotlib = ">=3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/nexa_marketdata --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src/nexa_marketdata"]
omit = ["tests/*"]
